# backend/src/aiskra/modules/training/api/deps.py
@@ -37,5 +37,6 @@ provide_get_material = provider_stub("training.GetMaterialHandler")
 provide_material_files = provider_stub("training.MaterialFiles")
 provide_transcribe = provider_stub("training.TranscribeHandler")
 provide_speech_status = provider_stub("training.SpeechStatus")
+provide_voice_lab = provider_stub("training.VoiceLab")
 provide_replica_audio = provider_stub("training.ReplicaAudioHandler")
 provide_call_recording = provider_stub("training.CallRecordingHandler")
